# jy-agent

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  run.sh
jyagent/: __init__.py  __main__.py  agent.py  agent_commands.py  checkpoint.py  cli.py  config.py  durability.py  evolution_strategy.py  evolver.py  loop_engine.py  manifest.json  mcp_client.py  mcp_manager.py  observability.py  phases.py  planner.py  reflection.py  registry.py  remediation.py  self_memory.py  session_stats.py  skills.py  system_prompt.py  terminal_ux.py  text_utils.py  todos.py  tool_edit_file.py  tool_glob_grep.py  tool_mcp.py  tool_web_fetch.py  toolresult.py  tools.py  tracing.py  validation.py  validator.py  verification.py
tests/: test_background.py  test_checkpoint.py  test_chrome_concurrency.py  test_cli.py  test_codex_review_fixes.py  test_compaction_upgrade.py  test_config.py  test_context_mgmt_fixes.py  test_cost_unification.py  test_create_skill.py  test_edit_file.py  test_empty_turn_recovery.py  test_event_log.py  test_fileutils.py  test_harness_quick_wins.py  test_llm.py  test_llm_client_protocol.py  test_llm_runner_validation.py  test_llm_validation.py  test_loop_contextvar_propagation.py  test_loop_edge_cases.py  test_loop_engine.py  test_loop_engine_critical.py  test_loop_engine_p0_fixes.py  test_loop_latent_bugs.py  test_loop_result_presenter.py  test_loop_retry_consolidation.py  test_loop_runtime_safety.py  test_macos_canvas_rows.py  test_macos_clipboard.py  test_main.py  test_memory.py  test_memory_phase1.py  test_memory_tiers.py  test_memory_upgrades.py  (+39 more)
(+210 files in other folders)
