[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jyagent"
version = "1.0.0"
description = "JY Agent — Personal AI assistant powered by Claude, with self-evolution, MCP integration, and cross-session markdown memory"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jianyong"},
]

dependencies = [
    "anthropic>=0.80.0",
    "mcp>=1.26,<2",
    "httpx>=0.27",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "beautifulsoup4>=4.12",
    "html2text>=2024.0",
    "trafilatura>=1.8",
    "readability-lxml>=0.8",
    "curl_cffi>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
jy-agent = "jyagent.__main__:main"

[tool.setuptools.packages.find]
include = ["jyagent*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
